--- a/plugin.yml
+++ b/plugin.yml
@@ -14,6 +14,11 @@ commands:
         usage: /team player
         permission: KingdomsGameplay.team
         permission-message: You don't have the permission to do this!
+    daynum:
+        description: Prints the current day number
+        usage: /daynum
+        permission: KingdomsGameplay.daynum
+        permission-message: You don't have the permission to do this!
     teamset:
         description: Sets a player team
         usage: /teamset player (B|R)
