--- a/plugin.yml
+++ b/plugin.yml
@@ -29,3 +29,8 @@ commands:
         usage: /breakforce x y z world
         permission: KingdomsGameplay.admin.breakforce
         permission-message: You don't have the permission to do this!
+	ts:
+        description: Teamsay, say something to your team members
+        usage: /ts message
+		permission: KingdomsGameplay.teamsay
+        permission-message: You don't have the permission to do this!
