Added command /teamsay, analogue to /ts, for thoses who likes verbose style.

--- a/plugin.yml
+++ b/plugin.yml
@@ -34,3 +34,8 @@ commands:
         usage: /ts message
         permission: KingdomsGameplay.teamsay
         permission-message: You don't have the permission to do this!
+    teamsay:
+        description: Teamsay, say something to your team members
+        usage: /ts message
+        permission: KingdomsGameplay.teamsay
+        permission-message: You don't have the permission to do this!
