Added dayreset command - reset days count to zero.

--- a/plugin.yml
+++ b/plugin.yml
@@ -19,6 +19,11 @@ commands:
         usage: /daynum
         permission: KingdomsGameplay.daynum
         permission-message: You don't have the permission to do this!
+    dayreset:
+        description: Resets the day count to zero.
+        usage: /dayreset
+        permission: KingdomsGameplay.admin.dayreset
+        permission-message: You don't have the permission to do this!
     teamset:
         description: Sets a player team
         usage: /teamset player (B|R)
